--- a/css/create-point.css
+++ b/css/create-point.css
@@ -101,3 +101,42 @@ form button:hover {
   background-color: #2fb86e;
   transition: background-color 400ms;
 }
+
+.items-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 16px;
+}
+
+.items-grid li {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f5f5f5;
+  list-style: none;
+  border: 2px solid #f5f5f5;
+  border-radius: 8px;
+  padding: 32px 24px 16px;
+  height: 180px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.items-grid li span {
+  display: flex;
+  flex: 1;
+  margin-top: 12px;
+  align-items: center;
+  color: var(--title-color);
+}
+
+.items-grid li.selected {
+  background-color: #e1faec;
+  border: 2px solid var(--primary-color);
+}
+
+.items-grid li img,
+.items-grid li span {
+  pointer-events: none;
+}
