Terceiro dia | Página modal de pesquisa e página dos pontos encontrados adicionadas. Interação JS para adicionar e remover o modal da tela também

--- a/css/create-point.css
+++ b/css/create-point.css
@@ -26,6 +26,9 @@
 }
 
 form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   background-color: white;
   padding: 64px;
   margin: 80px auto;
@@ -59,11 +62,13 @@ form .field {
 
 form .field-group {
   display: flex;
+  flex-wrap: wrap;
 }
 
 form input,
 form select {
-  background-color: #f0f0f5;
+  flex-wrap: wrap;
+  background-color: var(--secundary-color);
   border: 0;
   padding: 16px 24px;
   font-size: 16px;
