--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
 :root {
   --title-color: #322153;
   --primary-color: #34cb79;
+  --secundary-color: #f0f0f5;
 }
 
 html {
@@ -14,7 +15,7 @@ html {
 }
 
 body {
-  background: #f0f0f5;
+  background: var(--secundary-color);
   -webkit-font-smoothing: antialiased;
 }
 
