Quarto dia - Backend (Subindo servidor em Node) | Começando a usar o Nunjucks (template engine).

--- a/public/styles/create-point.css
+++ b/public/styles/create-point.css
@@ -46,11 +46,19 @@ form fieldset {
 }
 
 form legend {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin-bottom: 40px;
+  width: 100%;
 }
 
 form legend h2 {
   font-size: 24px;
+}
+
+form legend span {
+  color: var(--title-color);
 }
 
 form .field {
