--- a/public/styles/search-results.css
+++ b/public/styles/search-results.css
@@ -1,11 +1,16 @@
+body {
+  background: white;
+}
+
 body::after {
   content: "";
-  position: fixed;
-  background-color: white;
-  top: 300px;
+  position: absolute;
+  background-color: var(--secundary-color);
+  top: 0;
   right: 0;
   left: 0;
   bottom: 0;
+  height: 16rem;
   z-index: -1;
 }
 
