--- a/public/styles/responsive.css
+++ b/public/styles/responsive.css
@@ -19,27 +19,29 @@
   #page-home header a {
     width: 242px;
     position: absolute;
-    bottom: 48px;
+    bottom: 35px;
     left: 50%;
     transform: translateX(-50%);
   }
   /* page-create-point */
-  form {
-    padding: 15px;
-    margin: 50px auto;
-  }
-  form .field-group .field+.field {
-    margin-left: 0px;
-  }
-  #page-create-point header img {
+  #page-create-point header a img {
     width: 140px;
   }
-  .items-grid {
-    grid-template-columns: 1fr 1fr;
+  #page-create-point header a span {
+    margin-right: 2px;
   }
-  .items-grid li {
-    padding: 5px;
-    height: 110px;
+  form {
+    padding: 10px;
+  }
+  form .items-grid {
+    grid-template-columns: 1fr 1fr;
+    gap: 6px;
+  }
+  form .field-group {
+    flex-direction: column;
+  }
+  form .field-group .field+.field {
+    margin-left: 0;
   }
   /* page-search-results */
   body::after {
@@ -53,6 +55,34 @@
   }
   #page-search-results header img {
     width: 140px;
+  }
+  /* page-sucess */
+  #page-sucess header {
+    justify-content: center;
+  }
+  #page-sucess main {
+    justify-content: center;
+  }
+  #page-sucess main .content {
+    justify-content: center;
+    align-items: center;
+  }
+  #page-sucess main .content p {
+    line-height: 25px;
+    font-size: 15px;
+    width: 240px;
+    margin: 0 0;
+  }
+  #page-sucess main .content h1 {
+    text-align: center;
+    font-size: 37px;
+    width: 330px;
+  }
+  #page-sucess main a {
+    width: 90%;
+  }
+  #page-sucess main img {
+    display: none;
   }
 }
 
@@ -73,17 +103,28 @@
   #page-home main {
     align-items: center;
   }
-}
-
-@media (min-width: 501px) and (max-width: 708px) {
+  /* page-create-point */
   .items-grid {
     grid-template-columns: 1fr 1fr;
   }
   form .field-group {
     flex-direction: column;
   }
-  form .field-group .field + .field {
+  form .field-group .field+.field {
     margin-left: 0;
+  }
+  #page-sucess main {
+    justify-content: center;
+    align-items: center;
+  }
+  #page-sucess main .content {
+    max-width: 480px;
+  }
+  #page-sucess main img {
+    display: none;
+  }
+  #page-sucess main a {
+    align-self: center;
   }
 }
 
@@ -101,6 +142,16 @@
     font-size: 19px;
     line-height: 25px;
   }
+  /* page-sucess */
+  #page-sucess main .content {
+    max-width: 350px;
+    justify-content: center;
+    margin-bottom: 50px auto;
+  }
+  #page-sucess main img {
+    width: 450px;
+    height: 450px;
+  }
 }
 
 @media (min-width: 1001px) and (max-width: 1130px) {
@@ -116,6 +167,13 @@
   #page-home main p {
     font-size: 17px;
     line-height: 20px;
+  }
+  /* page-sucess */
+  #page-sucess main .content {
+    max-width: 350px;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 50px auto;
   }
 }
 
